--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-plugin-styled-components": "^1.5.1",
     "gatsby": "next",
     "gatsby-plugin-catch-links": "next",
+    "gatsby-plugin-google-analytics": "^1.0.31",
     "gatsby-plugin-lodash": "next",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-offline": "next",
