--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "description": "Blog from Michael Hoffmann (Mokkapps) about software development",
   "version": "1.0.0",
   "author": "Michael Hoffmann <kontakt@mokkapps.de>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Mokkapps/blog"
+  },
   "dependencies": {
     "babel-plugin-styled-components": "^1.5.1",
     "gatsby": "next",
